Bug #32149  Long semaphore wait for adaptive hash latch

Fix by calling ha_release_temporary_latches() before ::filesort().